--- a/index.html
+++ b/index.html
@@ -7,8 +7,19 @@
     <link rel="shortcut icon" href="front-end-developer.webp" type="image/x-icon">
     <title> My Protfolio</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css">
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
+    <!-- <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script> -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+        integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+        crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.14.7/dist/umd/popper.min.js"
+        integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
+        crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/js/bootstrap.min.js"
+        integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
+        crossorigin="anonymous"></script>
 
     <style>
         body {
@@ -165,6 +176,9 @@
             float: right;
 
         }
+        p{
+            text-align: justify;
+        }
     </style>
 
     <script>
@@ -185,39 +199,37 @@
 <body>
     <div>
         <!-- <header> -->
-
-        <nav class="navbar navbar-expand-sm navbar-dark ">
-            <div class="container-fluid">
-                <img src="profile.jpg" class="rounded-circle" alt="" srcset="" width="100px" height="100px">
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#mynavbar">
+            <nav class="navbar navbar-expand-sm  navbar-dark">
+                <div class="container-fluid">
+                    <img src="profile.jpg" class="rounded-circle" alt="" srcset="" width="100px" height="100px">
+                  <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#collapsibleNavbar">
                     <span class="navbar-toggler-icon"></span>
-                </button>
-                <div class="collapse navbar-collapse" id="mynavbar">
+                  </button>
+                  <div class="collapse navbar-collapse" id="collapsibleNavbar">
                     <ul class="navbar-nav me-auto">
                         <li class="nav-item ">
-                            <a class="nav-link text-white" href="">About</a>
+                            <a class="nav-link text-white" href="#about">About</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link text-white" href="">work</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-white" href="">projects</a>
+                            <a class="nav-link text-white" href="#projects">projects</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-white" href="">certifications</a>
+                            <a class="nav-link text-white" href="#certification">certifications</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-white" href="">internship</a>
+                            <a class="nav-link text-white" href="#intern">internship</a>
                         </li>
-                        
+
                     </ul>
-                    <!-- <form class="d-flex"> -->
-                    <!-- <input class="form-control me-2" type="text" placeholder="Search"> -->
                     <button class="btn btn-dark" type="button" onclick="fun()">dark mode</button>
-                    <!-- </form> -->
+                  </div>
                 </div>
-            </div>
-        </nav>
+              </nav>
+
+       
 
         <!-- </header> -->
 
@@ -258,7 +270,7 @@
 
         </section>
         <section>
-            <div>
+            <div id="certification">
                 <h4>Certification</h4>
                 <ul>
                     <li class="li-item">12-jan-2022 - "Introduction in IoT" in CISCO <a href="cisco_certification.jpg"
@@ -376,7 +388,7 @@
             </div>
         </section>
         <section>
-            <div>
+            <div id="intern">
                 <h2>Internship's</h2>
                 <h4>Completed internship in AVA Software pvt .Ltd as a " Software trainee - intern "</h4>
                 <h5>Position and Duration:</h5>
@@ -443,11 +455,11 @@
 
         <section id="contact">
             <h2>Contact</h2>
-            <p>You can reach me at your.email@example.com</p>
+            <p>You can reach me at dineshkumarsep142002@gmail.com</p>
         </section>
 
         <footer>
-            <p>&copy; 2024 Your Name. All rights reserved.</p>
+            <p>&copy; 2024 Dineshkumar. All rights reserved.</p>
         </footer>
     </div>
 
