--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <!-- <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script> -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
         integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
         crossorigin="anonymous"></script>
@@ -28,6 +28,7 @@
             padding: 0;
             background-color: #f7f7f7;
             color: #333;
+
         }
 
         header {
@@ -42,7 +43,7 @@
         section {
             margin: 20px;
             padding: 20px;
-            border: 1px solid #ddd;
+            border: 1px solid #bdbdbd;
             box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
             border-radius: 8px;
         }
@@ -148,7 +149,7 @@
         }
 
         nav {
-            background-color: #2c3e50 !important;
+            background-color: #3a7d8a !important;
         }
 
         html {
@@ -176,8 +177,15 @@
             float: right;
 
         }
-        p{
+
+        p {
             text-align: justify;
+        }
+
+        .nav-link:hover {
+            color: red !important;
+            border-bottom: 1px solid red;
+
         }
     </style>
 
@@ -199,20 +207,29 @@
 <body>
     <div>
         <!-- <header> -->
-            <nav class="navbar navbar-expand-sm  navbar-dark">
-                <div class="container-fluid">
+        <nav class="navbar navbar-expand-sm  navbar-dark">
+            <div class="container-fluid">
+                <div>
                     <img src="profile.jpg" class="rounded-circle" alt="" srcset="" width="100px" height="100px">
-                  <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#collapsibleNavbar">
+                </div>
+                <div>
+                    <h5 style="margin-left: 3px; color:white">Dineshkumar</h5>
+
+                </div>
+                <!-- <h3 style="margin-left: 30px; color:white" >Dineshkumar</h3> -->
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                    data-bs-target="#collapsibleNavbar">
                     <span class="navbar-toggler-icon"></span>
-                  </button>
-                  <div class="collapse navbar-collapse" id="collapsibleNavbar">
+                </button>
+                <div class="collapse navbar-collapse" id="collapsibleNavbar">
                     <ul class="navbar-nav me-auto">
+                        <!-- <h3 style="margin-left: 30px; color:white">Dineshkumar</h3> -->
                         <li class="nav-item ">
                             <a class="nav-link text-white" href="#about">About</a>
                         </li>
-                        <li class="nav-item">
+                        <!-- <li class="nav-item">
                             <a class="nav-link text-white" href="">work</a>
-                        </li>
+                        </li> -->
                         <li class="nav-item">
                             <a class="nav-link text-white" href="#projects">projects</a>
                         </li>
@@ -222,14 +239,20 @@
                         <li class="nav-item">
                             <a class="nav-link text-white" href="#intern">internship</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-white" href="#academics">Academics</a>
+                        </li>
 
                     </ul>
-                    <button class="btn btn-dark" type="button" onclick="fun()">dark mode</button>
-                  </div>
+                    <div>
+                        <img src="night.png" alt="">
+                        <button class="btn btn-dark" type="button" onclick="fun()">dark mode</button>
+                    </div>
                 </div>
-              </nav>
+            </div>
+        </nav>
 
-       
+
 
         <!-- </header> -->
 
@@ -451,15 +474,37 @@
                 </ul>
             </div>
         </section>
+        <section id="academics">
+            <h2>Academics</h2>
+            <h5>Bachelor of Information Technology ( june-2020 – 2023 )</h5>
+            <ul>
+                <li>Kpr college of arts,science and Research,Coimbatore.</li>
+                <li> UG CGPA – 7.9</li>
+            </ul>
+            <h5>Higher Secondary Education( 2018 – 2020 )</h5>
+            <ul>
+                <li>Vidhya vikashni Matric Hr Sec School,Tirupur</li>
+                <li> 79%</li>
+            </ul>
+            <h5>Secondary School Leaving Certificate( 2017 - 2018 )</h5>
+            <ul>
+                <li>Oxford modern Matric School,Tirupur</li>
+                <li> 84%</li>
+            </ul>
+
+        </section>
+
 
 
         <section id="contact">
             <h2>Contact</h2>
-            <p>You can reach me at dineshkumarsep142002@gmail.com</p>
+            <p> <img src="mail.png" alt="" srcset=""> You can reach me at dineshkumarsep142002@gmail.com</p>
+            <p><img src="icons8-phone-24.png" alt="" srcset=""> +91 9600268192</p>
         </section>
 
         <footer>
             <p>&copy; 2024 Dineshkumar. All rights reserved.</p>
+
         </footer>
     </div>
 
