--- a/index.html
+++ b/index.html
@@ -210,7 +210,7 @@
     <div>
         <!-- <header> -->
         <nav class="navbar navbar-expand-sm  navbar-dark">
-            <div class="container-fluid">
+            <div class="container-fluid" data-aos="fade-right">
                 <div>
                     <img src="profile.jpg" class="rounded-circle" alt="" srcset="" width="100px" height="100px">
                 </div>
@@ -223,7 +223,7 @@
                     data-bs-target="#collapsibleNavbar">
                     <span class="navbar-toggler-icon"></span>
                 </button>
-                <div class="collapse navbar-collapse" id="collapsibleNavbar">
+                <div class="collapse navbar-collapse" id="collapsibleNavbar" data-aos="fade-right">
                     <ul class="navbar-nav me-auto">
                         <!-- <h3 style="margin-left: 30px; color:white">Dineshkumar</h3> -->
                         <li class="nav-item ">
@@ -260,6 +260,7 @@
 
         <section id="about">
             <h2>About Me</h2>
+            <div data-aos="fade-right">
             <p>
                 Hi, I'm Dineshkumar, a passionate front-end web developer with a focus on creating modern and
                 user-friendly
@@ -270,10 +271,11 @@
                 I am a enthusiastic person and I can adapt to any working condition. I am a honest person and I will
                 try to give my 100 % in what I do
             </p>
+            </div>
         </section>
 
         <section id="skills">
-            <div>
+            <div data-aos="fade-right">
                 <h3>skills</h3>
                 <p class="lang"><span style="font-weight: bold;">Programming Languages :</span> C,C++,HTML, CSS,
                     JavaScript,Python,Django,React js, JSON</p>
@@ -286,7 +288,7 @@
             </div>
 
         </section>
-        <section>
+        <section data-aos="fade-right">
             <h4>Webiner</h4>
             <ul>
                 <li style="margin: 0%;">Emerging Trends in IOT and Wireless communication ( feb 2021)</li>
@@ -295,7 +297,7 @@
 
         </section>
         <section>
-            <div id="certification" data-aos="fade-up">
+            <div id="certification" data-aos="fade-right">
                 <h4>Certification</h4>
                 <ul>
                     <li class="li-item">12-jan-2022 - "Introduction in IoT" in CISCO <a href="cisco_certification.jpg"
@@ -321,11 +323,11 @@
 
         <section id="projects">
             <h2>Projects</h2>
-            <div class="projects" data-aos="fade-up">
+            <div class="projects" data-aos="fade-right">
                 <div class="project">
                     <h4>Title :“Industrial Booking portal for students”</h4>
                     <h5>ABSTRACT</h5>
-                    <p>In this web application fully provide Industrial Visit Information and offering Confirmation
+                    <p data-aos="fade-right">In this web application fully provide Industrial Visit Information and offering Confirmation
                         details. So this Website Company and student have to register this application. The role of
                         company is to add Industrial Visit providing company details and also add Industrial Visit
                         details
@@ -342,7 +344,7 @@
                         details
                         and all other details.</p>
                     <h5>EXISTING SYSTEM </h5>
-                    <p>
+                    <p data-aos="fade-right">
 
                         In the existing system student can directly visit to the company and request about the
                         Industrial Visit purpose. It’s difficult to reach the each company visiting process and
@@ -383,7 +385,7 @@
                         <li> No redundancy</li>
 
                     </ul>
-                    <div class="container-fluid" data-aos="fade-up">
+                    <div class="container-fluid" data-aos="fade-right">
                         <div class="row">
                             <div class="col-sm-4">
                                 <img src="screen1.png" alt="" srcset="" class="img-size">
@@ -413,7 +415,7 @@
             </div>
         </section>
         <section>
-            <div id="intern" data-aos="fade-up">
+            <div id="intern" data-aos="fade-right">
                 <h2>Internship's</h2>
                 <h4>Completed internship in AVA Software pvt .Ltd as a " Software trainee - intern "</h4>
                 <h5>Position and Duration:</h5>
@@ -448,7 +450,7 @@
                 </ul>
             </div>
             <hr style="border: 1px solid black;">
-            <div data-aos="fade-up">
+            <div data-aos="fade-right">
                 <h4>Completed internship in Narayana Hrudayalaya Limited as a "Digital Marketing - intern"</h4>
                 <h5>Position and Duration:</h5>
                 <ul>
@@ -476,7 +478,7 @@
                 </ul>
             </div>
         </section>
-        <section id="academics" data-aos="fade-up">
+        <section id="academics" data-aos="fade-right">
             <h2>Academics</h2>
             <h5>Bachelor of Information Technology ( june-2020 – 2023 )</h5>
             <ul>
@@ -498,7 +500,7 @@
 
 
 
-        <section id="contact">
+        <section id="contact" data-aos="fade-right">
             <h2>Contact</h2>
             <p> <img src="mail.png" alt="" srcset=""> You can reach me at dineshkumarsep142002@gmail.com</p>
             <p><img src="icons8-phone-24.png" alt="" srcset=""> +91 9600268192</p>
