--- a/index.html
+++ b/index.html
@@ -367,7 +367,7 @@
                         <li> No automatic messaging option available</li>
                     </ul>
                     <h5>PROPOSED SYSTEM</h5>
-                    <p>
+                    <p data-aos="fade-right">
                         This proposed Web application system is designed in the favor of the college student,
                         which helps them to get easy Industrial Visit approval intimation such as company name and
                         Industrial Visit schedule information to their students through this web application .It
