--- a/index.html
+++ b/index.html
@@ -24,30 +24,40 @@
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
 
     <style>
-        body {
-            font-family: 'Arial', sans-serif;
+         body {
+            font-family: 'Roboto', sans-serif;
             margin: 0;
             padding: 0;
-            background-color: #f7f7f7;
+            background-image: url('background-image.jpg'); /* Replace with your background image URL */
+            background-size: cover;
+            background-attachment: fixed;
+            background-color: #f0f4f8; /* Light background color */
             color: #333;
-
+            transition: background-color 0.3s, color 0.3s;
         }
 
-        header {
-            background-color: #2c3e50;
+    
+         header {
+            background-color: rgba(44, 62, 80, 0.9);
             color: white;
-            text-align: left;
-            padding: 2em;
-            position: relative;
-            height: 100px;
+            padding: 1em;
+            backdrop-filter: blur(10px);
         }
 
-        section {
-            margin: 20px;
-            padding: 20px;
-            border: 1px solid #bdbdbd;
-            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-            border-radius: 8px;
+        .navbar-brand img {
+            border-radius: 50%;
+            max-width: 80px;
+            height: auto;
+        }
+
+         section {
+            padding: 2em 1em;
+            margin: 1em auto;
+            max-width: 800px;
+            background-color: rgba(255, 255, 255, 0.9); /* Slightly more opaque for better readability */
+            border-radius: 10px;
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+            backdrop-filter: blur(10px);
         }
 
         .skills {
@@ -150,9 +160,7 @@
             cursor: pointer;
         }
 
-        nav {
-            background-color: #3a7d8a !important;
-        }
+     
 
         html {
             scroll-behavior: smooth;
@@ -184,10 +192,20 @@
             text-align: justify;
         }
 
-        .nav-link:hover {
-            color: red !important;
-            border-bottom: 1px solid red;
+          nav {
+            background-color: rgba(58, 125, 138, 0.9);
+            backdrop-filter: blur(10px);
+        }
 
+        .navbar-nav .nav-link {
+            color: #ffffff;
+            margin: 0 10px;
+            transition: color 0.3s, border-bottom 0.3s;
+        }
+
+        .navbar-nav .nav-link:hover {
+            color: #f1c40f;
+            border-bottom: 2px solid #f1c40f;
         }
     </style>
 
