--- a/index.html
+++ b/index.html
@@ -38,10 +38,9 @@
 
     
          header {
-            background-color: rgba(44, 62, 80, 0.9);
+            background-color: #2c3e50;
             color: white;
             padding: 1em;
-            backdrop-filter: blur(10px);
         }
 
         .navbar-brand img {
@@ -50,14 +49,13 @@
             height: auto;
         }
 
-         section {
+        section {
             padding: 2em 1em;
             margin: 1em auto;
             max-width: 800px;
-            background-color: rgba(255, 255, 255, 0.9); /* Slightly more opaque for better readability */
+            background-color: #ffffff;
             border-radius: 10px;
             box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-            backdrop-filter: blur(10px);
         }
 
         .skills {
