--- a/index.html
+++ b/index.html
@@ -28,9 +28,7 @@
             font-family: 'Roboto', sans-serif;
             margin: 0;
             padding: 0;
-            background-image: url('background-image.jpg'); /* Replace with your background image URL */
-            background-size: cover;
-            background-attachment: fixed;
+            background-image: url('background-image.jpg'); /* Replace with your background image URL *
             background-color: #f0f4f8; /* Light background color */
             color: #333;
             transition: background-color 0.3s, color 0.3s;
@@ -150,8 +148,8 @@
         }
 
         .dark-mode {
-            background-color: black;
-            color: white;
+            background-color: #121212;
+            color: #e0e0e0;
         }
 
         button {
