--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
         section {
             padding: 2em 1em;
             margin: 1em auto;
-            max-width: 800px;
+            max-width: 1000px;
             background-color: #ffffff;
             border-radius: 10px;
             box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
@@ -162,16 +162,22 @@
             scroll-behavior: smooth;
         }
 
-        .scroll-btn {
+          .scroll-btn {
             position: fixed;
             bottom: 50px;
             right: 20px;
             z-index: 99;
             cursor: pointer;
             padding: 10px;
-            border: 1px solid black;
-            background-color: white;
+            border: none;
+            background-color: #3498db;
+            color: white;
             border-radius: 10px;
+            box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
+        }
+
+        .scroll-btn:hover {
+            background-color: #2980b9;
         }
 
         .intern-btn {
@@ -205,18 +211,18 @@
         }
     </style>
 
-    <script>
-        function fun() {
+       <script>
+         document.addEventListener('DOMContentLoaded', () => {
+            AOS.init();
+
+            document.querySelector('.scroll-btn').addEventListener('click', () => {
+                window.scrollTo({ top: 0, behavior: 'smooth' });
+            });
+        });
+
+        function toggleDarkMode() {
             document.body.classList.toggle('dark-mode');
         }
-
-
-        function scrollToTop() {
-            document.body.scrollTop = 0;
-            document.documentElement.scrollTop = 0;
-        }
-
-
     </script>
 </head>
 
@@ -255,7 +261,8 @@
                         </li>
 
                     </ul>
-                    <button class="btn btn-dark" onclick="toggleDarkMode()">Dark Mode</button>
+                     <button class="btn btn-dark" onclick="toggleDarkMode()">Dark Mode</button>
+               
                 </div>
             </div>
         </nav>
@@ -515,6 +522,7 @@
             <p>&copy; 2024 Dineshkumar. All rights reserved.</p>
 
         </footer>
+        <button class="scroll-btn">Top</button>
     </div>
     <script>
      AOS.init();
