--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
             margin: 0;
             padding: 0;
             background-image: url('background-image.jpg'); /* Replace with your background image URL *
-            background-color: #f0f4f8; /* Light background color */
+             background-color: #f7f7f7;
             color: #333;
             transition: background-color 0.3s, color 0.3s;
         }
@@ -147,7 +147,7 @@
             background-color: rgb(244, 32, 32);
         }
 
-        .dark-mode {
+       .dark-mode {
             background-color: #121212;
             color: #e0e0e0;
         }
@@ -220,7 +220,7 @@
             });
         });
 
-        function toggleDarkMode() {
+      function toggleDarkMode() {
             document.body.classList.toggle('dark-mode');
         }
     </script>
@@ -261,7 +261,7 @@
                         </li>
 
                     </ul>
-                     <button class="btn btn-dark" onclick="toggleDarkMode()">Dark Mode</button>
+                         <button class="btn btn-dark" onclick="toggleDarkMode()">Dark Mode</button>
                
                 </div>
             </div>
@@ -421,7 +421,7 @@
 
 
 
-                <button class="scroll-btn" onclick="scrollToTop()"><span>&#8593;</span></button>
+            
 
 
             </div>
@@ -522,7 +522,7 @@
             <p>&copy; 2024 Dineshkumar. All rights reserved.</p>
 
         </footer>
-        <button class="scroll-btn">Top</button>
+            <button class="scroll-btn">Top</button>
     </div>
     <script>
      AOS.init();
