--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" href="front-end-developer.webp" type="image/x-icon">
     <title> My Protfolio</title>
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css">
     <!-- <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script> -->
@@ -20,6 +21,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/js/bootstrap.min.js"
         integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
         crossorigin="anonymous"></script>
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
 
     <style>
         body {
@@ -166,6 +168,11 @@
             border: 1px solid black;
             background-color: white;
             border-radius: 10px;
+            box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
+        }
+
+        .scroll-btn:hover {
+            background-color: black;
         }
 
         .intern-btn {
@@ -187,13 +194,21 @@
             border-bottom: 1px solid red;
 
         }
+        .scroll-btn {
+            background-color: #3498db;
+            color: white;
+            border: none;
+        }
     </style>
 
     <script>
-        function fun() {
-            document.body.classList.toggle('dark-mode');
-        }
+       document.addEventListener('DOMContentLoaded', () => {
+            AOS.init();
 
+            document.querySelector('.scroll-btn').addEventListener('click', () => {
+                window.scrollTo({ top: 0, behavior: 'smooth' });
+            });
+        });
 
         function scrollToTop() {
             document.body.scrollTop = 0;
@@ -208,7 +223,7 @@
     <div>
         <!-- <header> -->
         <nav class="navbar navbar-expand-sm  navbar-dark">
-            <div class="container-fluid">
+            <div class="container-fluid" data-aos="fade-right">
                 <div>
                     <img src="profile.jpg" class="rounded-circle" alt="" srcset="" width="100px" height="100px">
                 </div>
@@ -221,7 +236,7 @@
                     data-bs-target="#collapsibleNavbar">
                     <span class="navbar-toggler-icon"></span>
                 </button>
-                <div class="collapse navbar-collapse" id="collapsibleNavbar">
+                <div class="collapse navbar-collapse" id="collapsibleNavbar" data-aos="fade-right">
                     <ul class="navbar-nav me-auto">
                         <!-- <h3 style="margin-left: 30px; color:white">Dineshkumar</h3> -->
                         <li class="nav-item ">
@@ -258,6 +273,7 @@
 
         <section id="about">
             <h2>About Me</h2>
+            <div data-aos="fade-right">
             <p>
                 Hi, I'm Dineshkumar, a passionate front-end web developer with a focus on creating modern and
                 user-friendly
@@ -268,10 +284,11 @@
                 I am a enthusiastic person and I can adapt to any working condition. I am a honest person and I will
                 try to give my 100 % in what I do
             </p>
+            </div>
         </section>
 
         <section id="skills">
-            <div>
+            <div data-aos="fade-right">
                 <h3>skills</h3>
                 <p class="lang"><span style="font-weight: bold;">Programming Languages :</span> C,C++,HTML, CSS,
                     JavaScript,Python,Django,React js, JSON</p>
@@ -284,7 +301,7 @@
             </div>
 
         </section>
-        <section>
+        <section data-aos="fade-right">
             <h4>Webiner</h4>
             <ul>
                 <li style="margin: 0%;">Emerging Trends in IOT and Wireless communication ( feb 2021)</li>
@@ -293,7 +310,7 @@
 
         </section>
         <section>
-            <div id="certification">
+            <div id="certification" data-aos="fade-right">
                 <h4>Certification</h4>
                 <ul>
                     <li class="li-item">12-jan-2022 - "Introduction in IoT" in CISCO <a href="cisco_certification.jpg"
@@ -319,11 +336,11 @@
 
         <section id="projects">
             <h2>Projects</h2>
-            <div class="projects">
+            <div class="projects" data-aos="fade-right">
                 <div class="project">
                     <h4>Title :“Industrial Booking portal for students”</h4>
                     <h5>ABSTRACT</h5>
-                    <p>In this web application fully provide Industrial Visit Information and offering Confirmation
+                    <p data-aos="fade-right">In this web application fully provide Industrial Visit Information and offering Confirmation
                         details. So this Website Company and student have to register this application. The role of
                         company is to add Industrial Visit providing company details and also add Industrial Visit
                         details
@@ -340,7 +357,7 @@
                         details
                         and all other details.</p>
                     <h5>EXISTING SYSTEM </h5>
-                    <p>
+                    <p data-aos="fade-right">
 
                         In the existing system student can directly visit to the company and request about the
                         Industrial Visit purpose. It’s difficult to reach the each company visiting process and
@@ -363,7 +380,7 @@
                         <li> No automatic messaging option available</li>
                     </ul>
                     <h5>PROPOSED SYSTEM</h5>
-                    <p>
+                    <p data-aos="fade-right">
                         This proposed Web application system is designed in the favor of the college student,
                         which helps them to get easy Industrial Visit approval intimation such as company name and
                         Industrial Visit schedule information to their students through this web application .It
@@ -381,7 +398,7 @@
                         <li> No redundancy</li>
 
                     </ul>
-                    <div class="container-fluid">
+                    <div class="container-fluid" data-aos="fade-right">
                         <div class="row">
                             <div class="col-sm-4">
                                 <img src="screen1.png" alt="" srcset="" class="img-size">
@@ -405,13 +422,13 @@
 
 
 
-                <button class="scroll-btn" onclick="scrollToTop()"><span>&#8593;</span></button>
+                
 
 
             </div>
         </section>
         <section>
-            <div id="intern">
+            <div id="intern" data-aos="fade-right">
                 <h2>Internship's</h2>
                 <h4>Completed internship in AVA Software pvt .Ltd as a " Software trainee - intern "</h4>
                 <h5>Position and Duration:</h5>
@@ -446,7 +463,7 @@
                 </ul>
             </div>
             <hr style="border: 1px solid black;">
-            <div>
+            <div data-aos="fade-right">
                 <h4>Completed internship in Narayana Hrudayalaya Limited as a "Digital Marketing - intern"</h4>
                 <h5>Position and Duration:</h5>
                 <ul>
@@ -474,7 +491,7 @@
                 </ul>
             </div>
         </section>
-        <section id="academics">
+        <section id="academics" data-aos="fade-right">
             <h2>Academics</h2>
             <h5>Bachelor of Information Technology ( june-2020 – 2023 )</h5>
             <ul>
@@ -496,7 +513,7 @@
 
 
 
-        <section id="contact">
+        <section id="contact" data-aos="fade-right">
             <h2>Contact</h2>
             <p> <img src="mail.png" alt="" srcset=""> You can reach me at dineshkumarsep142002@gmail.com</p>
             <p><img src="icons8-phone-24.png" alt="" srcset=""> +91 9600268192</p>
@@ -506,7 +523,11 @@
             <p>&copy; 2024 Dineshkumar. All rights reserved.</p>
 
         </footer>
+        <button class="scroll-btn">Top</button>
     </div>
+    <script>
+     AOS.init();
+    </script>
 
 </body>
 
