--- a/index.html
+++ b/index.html
@@ -214,6 +214,9 @@
             document.body.scrollTop = 0;
             document.documentElement.scrollTop = 0;
         }
+         function toggleDarkMode() {
+            document.body.classList.toggle('dark-mode');
+        }
 
 
     </script>
