--- a/index.html
+++ b/index.html
@@ -32,6 +32,9 @@
             color: #333;
 
         }
+        h2{
+            color:blue;
+        }
 
         header {
             background-color: #2c3e50;
