--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
             color: #333;
 
         }
-        h2,h3,h4{
+        h3{
             color:blue;
         }
 
@@ -51,7 +51,8 @@
             border: 1px solid #bdbdbd;
             box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
             border-radius: 8px;
-            color:white;
+            color:black;
+            background-color: white;
         }
 
         .skills {
@@ -235,7 +236,7 @@
                     <img src="profile.jpg" class="rounded-circle" alt="" srcset="" width="100px" height="100px">
                 </div>
                 <div>
-                    <h5 style="margin-left: 3px; color:white">Dineshkumar</h5>
+                    
 
                 </div>
                 <!-- <h3 style="margin-left: 30px; color:white" >Dineshkumar</h3> -->
@@ -279,7 +280,7 @@
         <!-- </header> -->
 
         <section id="about">
-            <h2>About Me</h2>
+            <h3>About Me</h3>
             <div data-aos="fade-right">
             <p>
                 Hi, I'm Dineshkumar, a passionate front-end web developer with a focus on creating modern and
@@ -309,7 +310,7 @@
 
         </section>
         <section data-aos="fade-right">
-            <h4>Webiner</h4>
+            <h3>Webiner</h3>
             <ul>
                 <li style="margin: 0%;">Emerging Trends in IOT and Wireless communication ( feb 2021)</li>
                 <li>Machine Learning - overview and it's Applications ( Dec 2021)</li>
@@ -318,7 +319,7 @@
         </section>
         <section>
             <div id="certification" data-aos="fade-right">
-                <h4>Certification</h4>
+                <h3>Certification</h3>
                 <ul>
                     <li class="li-item">12-jan-2022 - "Introduction in IoT" in CISCO <a href="cisco_certification.jpg"
                             target="_self"><input type="button" value="view" class="view-btn"></a>
@@ -342,7 +343,7 @@
         </section>
 
         <section id="projects">
-            <h2>Projects</h2>
+            <h3>Projects</h3>
             <div class="projects" data-aos="fade-right">
                 <div class="project">
                     <h4>Title :“Industrial Booking portal for students”</h4>
@@ -436,7 +437,7 @@
         </section>
         <section>
             <div id="intern" data-aos="fade-right">
-                <h2>Internship's</h2>
+                <h3>Internship's</h3>
                 <h4>Completed internship in AVA Software pvt .Ltd as a " Software trainee - intern "</h4>
                 <h5>Position and Duration:</h5>
                 <ul>
@@ -499,7 +500,7 @@
             </div>
         </section>
         <section id="academics" data-aos="fade-right">
-            <h2>Academics</h2>
+            <h3>Academics</h3>
             <h5>Bachelor of Information Technology ( june-2020 – 2023 )</h5>
             <ul>
                 <li>Kpr college of arts,science and Research,Coimbatore.</li>
@@ -521,7 +522,7 @@
 
 
         <section id="contact" data-aos="fade-right">
-            <h2>Contact</h2>
+            <h3>Contact</h3>
             <p> <img src="mail.png" alt="" srcset=""> You can reach me at dineshkumarsep142002@gmail.com</p>
             <p><img src="icons8-phone-24.png" alt="" srcset=""> +91 9600268192</p>
         </section>
