--- a/index.html
+++ b/index.html
@@ -25,7 +25,8 @@
 
     <style>
         body {
-            font-family: 'Helvetica', sans-serif;
+            
+            font-style: Helvetica;
             margin: 0;
             padding: 0;
             background-color: #f7f7f7;
@@ -37,12 +38,16 @@
         }
 
         header {
-            background-color: #2c3e50;
+            background-color: blue;
             color: white;
             text-align: left;
             padding: 2em;
             position: relative;
             height: 100px;
+        }
+        a{
+            font-weight : bold;
+            font-size: 120%;
         }
 
         section {
@@ -52,6 +57,7 @@
             box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
             border-radius: 8px;
             color:black;
+            background-color:white;
         
         }
 
@@ -71,7 +77,7 @@
         }
 
         footer {
-            background-color: #2c3e50;
+            background-color: blue;
             color: white;
             text-align: center;
             padding: 1em;
@@ -195,7 +201,7 @@
         }
 
         .nav-link:hover {
-            color: red !important;
+            color: black !important;
             border-bottom: 1px solid red;
 
         }
