--- a/index.html
+++ b/index.html
@@ -45,6 +45,9 @@
             position: relative;
             height: 100px;
         }
+        #head{
+           background-color: blue !important ;
+        }
         a{
             font-weight : bold;
             font-size: 120%;
@@ -236,7 +239,7 @@
 <body>
     <div>
         <!-- <header> -->
-        <nav class="navbar navbar-expand-sm  navbar-dark">
+        <nav class="navbar navbar-expand-sm  navbar-dark" id="head">
             <div class="container-fluid" data-aos="fade-right">
                 <div>
                     <img src="profile.jpg" class="rounded-circle" alt="" srcset="" width="100px" height="100px">
