--- a/index.html
+++ b/index.html
@@ -46,11 +46,11 @@
             height: 100px;
         }
         #head{
-           background-color: blue !important ;
+           background-color: #87CEEB !important ;
         }
         a{
-            font-weight : bold;
-            font-size: 120%;
+            font-weight : bold !important ;
+            font-size: 130% !important ;
         }
 
         section {
@@ -80,7 +80,7 @@
         }
 
         footer {
-            background-color: blue;
+            background-color: #87CEEB;
             color: white;
             text-align: center;
             padding: 1em;
