--- a/index.html
+++ b/index.html
@@ -31,6 +31,11 @@
             padding: 0;
             background-color: #f7f7f7;
             color: #333;
+             background-image: url('https://img.freepik.com/premium-photo/minimal-geometric-background-copy-space_1179130-410999.jpg?ga=GA1.1.1388068982.1723198240&semt=ais_hybrid'); /* Replace with your image path */
+            background-size: cover; /* Ensure the image covers the entire page */
+            background-position: center; /* Center the image */
+            background-attachment: fixed; /* Keep the image fixed during scrolling */
+            background-repeat: no-repeat;
 
         }
         h3{
