--- a/index.html
+++ b/index.html
@@ -29,9 +29,9 @@
             font-style: Helvetica;
             margin: 0;
             padding: 0;
-            background-color: #f7f7f7;
+            background-color: light-grey;
             color: #333;
-             background-image: url('https://img.freepik.com/premium-photo/minimal-geometric-background-copy-space_1179130-412585.jpg?ga=GA1.1.1388068982.1723198240&semt=ais_hybrid'); /* Replace with your image path */
+             background-image: url(''); /* Replace with your image path */
             background-size: cover; /* Ensure the image covers the entire page */
             background-position: center; /* Center the image */
             background-attachment: fixed; /* Keep the image fixed during scrolling */
