--- a/index.html
+++ b/index.html
@@ -355,6 +355,48 @@
 
             </div>
         </section>
+         <section id="">
+            <h3>Python Full-Stack Developer Certification from Trishanna Technologies</h3>
+            <h4>Course Overview</h4>
+             <ul>
+               <li>Completed a comprehensive Python Full-Stack Development course at Trishanna Technologies, Bangalore.</li>
+                <li>Duration: October 26, 2023 - February 26, 2024.</li> 
+             </ul>
+             <h4>Skills Acquired</h4>
+             <h6>Front-End Development</h6>
+             <ul>
+                 <li>HTML, CSS, JavaScript, Bootstrap, React JS.</li>
+             </ul>
+             <h6>Back-End Development</h6>
+             <ul>
+                 <li>Python, Django.</li>
+             </ul>
+             <h6>Database Management</h6>
+             <ul>
+                 <li>MySQL, JSON.</li>
+             </ul>
+             <h4>Projects and Hands-On Experience</h4>
+             <ul>
+                 <li>Successfully completed several hands-on projects.</li>
+                 <p>Gained practical experience in</p>
+                 <li>Building web applications with dynamic and responsive interfaces.</li>
+                 <li>Integrating front-end and back-end components for seamless user experiences.
+</li>
+                 <li>Managing and querying databases efficiently</li>
+             </ul>
+             <h4>Notable Achievements</h4>
+             <ul>
+                 <li>Developed a fully functional web application as part of the final project.</li>
+                 <li>Demonstrated the ability to work with both front-end and back-end technologies effectively.</li>
+                 <li>Gained a strong understanding of full-stack development principles.</li>
+             </ul>
+             <h4>Certifications</h4>
+             <ul>
+                 <li>Awarded a Certificate of Completion for the Python Full-Stack Development course by Trishanna Technologies. <a href="L&T_certification.jpg" target="_self"><input type="button" value="view"
+                                class="view-btn"></a></li>
+             </ul>
+             
+        </section>
 
         <section id="projects">
             <h3>Projects</h3>
