--- a/index.html
+++ b/index.html
@@ -218,6 +218,9 @@
             color: white;
             border: none;
         }
+        .con{
+              text-decoration: none;
+        }
     </style>
 
     <script>
@@ -278,6 +281,9 @@
                         </li>
                         <li class="nav-item">
                             <a class="nav-link text-white" href="#academics">Academics</a>
+                        </li>
+                         <li class="nav-item">
+                            <a class="nav-link text-white" href="#course">Course</a>
                         </li>
 
                     </ul>
@@ -355,7 +361,8 @@
 
             </div>
         </section>
-         <section id="">
+         <section>
+             <div data-aos="fade-right" id="course">
             <h3>Python Full-Stack Developer Certification from Trishanna Technologies</h3>
             <h4>Course Overview</h4>
              <ul>
@@ -378,7 +385,7 @@
              <h4>Projects and Hands-On Experience</h4>
              <ul>
                  <li>Successfully completed several hands-on projects.</li>
-                 <p>Gained practical experience in</p>
+                 <li>Gained practical experience in</li>
                  <li>Building web applications with dynamic and responsive interfaces.</li>
                  <li>Integrating front-end and back-end components for seamless user experiences.
 </li>
@@ -392,9 +399,10 @@
              </ul>
              <h4>Certifications</h4>
              <ul>
-                 <li>Awarded a Certificate of Completion for the Python Full-Stack Development course by Trishanna Technologies. <a href="L&T_certification.jpg" target="_self"><input type="button" value="view"
+                 <li>Awarded a Certificate of Completion for the Python Full-Stack Development course by Trishanna Technologies. <a href="python_certificate.jpeg" target="_self"><input type="button" value="view"
                                 class="view-btn"></a></li>
              </ul>
+             </div>
              
         </section>
 
@@ -579,8 +587,8 @@
 
         <section id="contact" data-aos="fade-right">
             <h3>Contact</h3>
-            <p> <img src="mail.png" alt="" srcset=""> You can reach me at dineshkumarsep142002@gmail.com</p>
-            <p><img src="icons8-phone-24.png" alt="" srcset=""> +91 9600268192</p>
+            <p> <img src="mail.png" alt="" srcset=""> You can reach me at <a class="con" href="mailto:dineshkumarsep142002@gmail.com">dineshkumarsep142002@gmail.com</a></p>
+            <p><img src="icons8-phone-24.png" alt="" srcset="">  <a class="con" href="tel:+919600268192">+91 9600268192</a></p>
         </section>
 
         <footer>
