--- a/index.html
+++ b/index.html
@@ -556,7 +556,7 @@
                 <ul>
                     <li> Gained valuable insights into the healthcare industry and its unique challenges in digital
                         marketing.</li>
-                    <li>Applied theoretical knowledge to real-world scenarios, enhancing practical skills.<a
+                    <li>Applied theoretical knowledge to real-world scenarios.<a
                             href="internship_certification.jpg" target="_self"><input type="button" value="view"
                                 class="intern-btn"></a>
                     </li>
